mobile nav collapse fixed and animation removed

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -28,7 +28,8 @@ body.noverflow {
 }
 
 div.beginning {
-  background: url(../components/assets/home-bg.jpg) no-repeat center center/cover,
+  background: url(../components/assets/home-bg.jpg) no-repeat center
+      center/cover,
     rgba(0, 0, 0, 0.6);
   background-blend-mode: darken;
   max-width: 100%;
@@ -309,7 +310,7 @@ div.container {
 }
 
 div.con1 div.col-sm h4,
-.con3>div>h4,
+.con3 > div > h4,
 .sec3 h4,
 .sec4 h4,
 .sec5 h4 {
@@ -322,7 +323,7 @@ div.con1 div.col-sm h4,
 }
 
 div.con1 div.col-sm h2,
-.con3>div>h2,
+.con3 > div > h2,
 .sec3 h2,
 .sec4 h2,
 .sec5 h2 {
@@ -346,11 +347,13 @@ div.testTile {
 }
 
 div.testTile h2 {
-  color: linear-gradient(to left,
-      #541484 0%,
-      #450575 25%,
-      #541484 75%,
-      #450575 100%);
+  color: linear-gradient(
+    to left,
+    #541484 0%,
+    #450575 25%,
+    #541484 75%,
+    #450575 100%
+  );
   font-size: 36px;
 }
 
@@ -384,23 +387,25 @@ div.con3 {
   padding: 80px 0;
 }
 
-div.con3>div {
+div.con3 > div {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-div.con3>div>h4 {
+div.con3 > div > h4 {
   font-size: 16px;
   line-height: 1em;
-  color: linear-gradient(to left,
-      #541484 0%,
-      #450575 25%,
-      #541484 75%,
-      #450575 100%);
+  color: linear-gradient(
+    to left,
+    #541484 0%,
+    #450575 25%,
+    #541484 75%,
+    #450575 100%
+  );
 }
 
-div.con3>div>h2 {
+div.con3 > div > h2 {
   font-size: 36px;
   color: #1e1f36;
   font-weight: 700;
@@ -515,7 +520,8 @@ div.word h4 {
 div.sec2 {
   width: 100vw;
   height: 120vh;
-  background: url(../components/assets/mdspeech1.jpg) no-repeat fixed center center/cover,
+  background: url(../components/assets/mdspeech1.jpg) no-repeat fixed center
+      center/cover,
     var(--green);
   background-blend-mode: multiply;
 }
@@ -601,7 +607,8 @@ div.sec2 div.embed-responsive {
   margin-top: 60px;
   width: 100vw;
   height: 100vh;
-  background: url(../components/assets/testimonial-bg.jpg) no-repeat fixed center/cover,
+  background: url(../components/assets/testimonial-bg.jpg) no-repeat fixed
+      center/cover,
     #fdfdfd;
   background-blend-mode: overlay;
   color: #fff;
@@ -703,11 +710,13 @@ div.sec2 div.embed-responsive {
   position: absolute;
   left: -30px;
   content: '';
-  background: linear-gradient(to right,
-      rgba(255, 255, 255, 0.13) 0%,
-      rgba(255, 255, 255, 0.13) 77%,
-      rgba(255, 255, 255, 0.5) 92%,
-      rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.13) 0%,
+    rgba(255, 255, 255, 0.13) 77%,
+    rgba(255, 255, 255, 0.5) 92%,
+    rgba(255, 255, 255, 0) 100%
+  );
   width: 10%;
   height: 100%;
   transform: translate(-100%);
@@ -1241,9 +1250,8 @@ ul.navbar-nav {
 
 /* shut scroll for iPad and below start */
 @media (max-width: 770px),
-(orientation: landscape) and (max-width: 1024px) and (min-width: 812px),
-(orientation: landscape) and (max-height: 1025px) and (min-height: 1024px) {
-
+  (orientation: landscape) and (max-width: 1024px) and (min-width: 812px),
+  (orientation: landscape) and (max-height: 1025px) and (min-height: 1024px) {
   html,
   body {
     width: 100%;
@@ -1251,7 +1259,7 @@ ul.navbar-nav {
     overflow: hidden;
   }
 
-  body>div {
+  body > div {
     height: 100%;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
